# Phone-agent-testing

./: .env.example  .gitignore  ARCHITECTURE.md  BUG_REPORT.md  README.md  pyproject.toml  scenarios.yaml
runs/: callback_followup_20260627_001037.json  callback_followup_20260627_001557.json  cancel_appointment_20260626_233646.json  insurance_question_20260627_000112.json  location_info_20260626_235615.json  office_hours_20260626_234915.json  refill_request_20260626_234347.json  reschedule_appointment_20260626_233130.json  scheduling_basic_20260626T035809Z.json  scheduling_basic_20260626T040414Z.json  scheduling_basic_20260626T042159Z.json  scheduling_basic_20260626T042734Z.json  scheduling_basic_20260626T042922Z.json  scheduling_basic_20260626_232310.json  unclear_request_20260627_002000.json  unusual_edge_case_20260627_002612.json
src/pgaibot/: __init__.py  artifacts.py  caller.py  cli.py  config.py  recordings.py  (+3 more)
tests/: test_openrouter_client.py
transcripts/: callback_followup_20260627_001037.txt  callback_followup_20260627_001557.txt  cancel_appointment_20260626_233646.txt  insurance_question_20260627_000112.txt  location_info_20260626_235615.txt  office_hours_20260626_234915.txt  refill_request_20260626_234347.txt  reschedule_appointment_20260626_233130.txt  scheduling_basic_20260626T035809Z.txt  scheduling_basic_20260626T040414Z.txt  scheduling_basic_20260626T042159Z.txt  scheduling_basic_20260626T042734Z.txt  scheduling_basic_20260626T042922Z.txt  scheduling_basic_20260626_232310.txt  unclear_request_20260627_002000.txt  unusual_edge_case_20260627_002612.txt
